# useful-transformers

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/whisper/: CMakeLists.txt  __init__.py  pybind_whisper.cc  torch_state_dict_to_npz.py  transcribe_wav.py  transcription_client.py  transcription_server.py  translate_wav.py  whisper.cc  whisper.h  whisper.py
examples/whisper/assets/: fft_params.npz
lib/: CMakeLists.txt  attention.cc  attention.h  bias.cc  bias.h  conv.cc  conv.h  layernorm.cc  layernorm.h  matmul.cc  matmul.h  matview.h  misc.h  profiler.cc  profiler.h  pybind_residual_attention_block.cc  residual_attention_block.cc  residual_attention_block.h  rknn_api.h  rknn_matmul_api.h  softmax.cc  softmax.h
